# BerlinFlatBot

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README-python.md  README.md  SETUP.md  berlin-flat-bot.service  bot.py  commit-and-merge.sh  config-test.json  config.json  config.json.example  flats_cache.json  requirements.txt  run.sh  scrapers.py  setup.sh  telegram.service  test_inberlin.py
scrapers/: __init__.py  base.py  cache.py  degewo.py  gesobau.py  gewobag.py  inberlin.py  session.py  stadtundland.py
src/: config.rs  main.rs  monitor.rs  scrapers.rs  telegram.rs  types.rs
