[package]
name = "berlin-flat-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client and web scraping
reqwest = { version = "0.11", features = ["json", "gzip"] }
scraper = "0.19"
url = "2.5"
async-trait = "0.1"

# Telegram bot
teloxide = { version = "0.12", features = ["macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
once_cell = "1.19"
dashmap = "5.5"
uuid = { version = "1.6", features = ["v4"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true